--- a/index.html
+++ b/index.html
@@ -1,11 +1,63 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Galaxy Programming School</title>
 </head>
 <body>
-    
+    <article>
+        <section class="Ruby">
+            <h1>Curso Intermediario- Ruby on rails  </h1>
+            <img src="img/ruby.png" alt="Um ruby">
+            <p>Desenvolva para a web com o framework que revolucionou o mercado pela sua agilidade, além da linguagem Ruby que oferece recursos incríveis. </p>
+        </section>
+        <section class="JavaScript">
+            <h1>Curso Intermediario- JavaScript</h1>
+            <img src="img/javascript.svg" alt="JavaScript Logo">
+            <p>Desenvolva aplicações reais com Javascript com este curso 100% prático e direto ao ponto. Aprenda <strong>DE VERDADE</strong></p>
+        </section>
+        <section  class="Java">
+            <h1>Curso Intermediario- Java</h1>
+            <img src="img/java.svg" alt="Logo Java">
+            <p>Este é um curso que traz um conteúdo considerado intermediário, portanto é recomendado que os estudantes tenham conhecimento básico do assunto</p>
+        </section>
+        <section class="Php">
+            <h1>Curso Avançado - PHP</h1>
+            <img src="img/new-php-logo.png" alt="Logo Php">
+            <p>Você vai desenvolver com uma das linguagens mais populares no mercado.Use corretamente a orientação a objetos com o PHP. Aprenda a lidar com as coleções. Aproveite o Composer e muito mais!</p
+        </section>
+        <section class="Dart">
+            <h1>Curso Iniciante - Flutter</h1>
+            <img src="img/flutter.png" alt="logo Flutter">
+            <p> Aprenda a gerenciar o estado da sua aplicação com Single Source of TruthUtilizar o Provider para gerenciar o estado de forma escalável</p>
+        </section>
+    </article>
+    <footer>
+        <table>
+            <thead>
+                <tr>
+                    <th>Entre em contato</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>
+                        email: joaoalves.contato@outlook.com.br
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        telefone: 40028922
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        whatsapp : 11988614986
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </footer>
 </body>
 </html>
