add novas funcionalidades

--- a/index.html
+++ b/index.html
@@ -3,34 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Galaxy Programming School</title>
+    <title>Galaxy School</title>
 </head>
 <body>
     <article>
         <section class="Ruby">
             <h1>Curso Intermediario- Ruby on rails  </h1>
-            <img src="img/ruby.png" alt="Um ruby">
+            <img src="img/ruby.png" alt="Um ruby" width="256" height="256">
             <p>Desenvolva para a web com o framework que revolucionou o mercado pela sua agilidade, além da linguagem Ruby que oferece recursos incríveis. </p>
         </section>
         <section class="JavaScript">
             <h1>Curso Intermediario- JavaScript</h1>
-            <img src="img/javascript.svg" alt="JavaScript Logo">
+            <img src="img/javascript.svg" alt="JavaScript Logo" width="256" height="256">
             <p>Desenvolva aplicações reais com Javascript com este curso 100% prático e direto ao ponto. Aprenda <strong>DE VERDADE</strong></p>
+            <p>Compre agora
+                <button>R$300</button>
+            </p> 
         </section>
         <section  class="Java">
             <h1>Curso Intermediario- Java</h1>
-            <img src="img/java.svg" alt="Logo Java">
+            <img src="img/java.svg" alt="Logo Java" width="256" height="256">
             <p>Este é um curso que traz um conteúdo considerado intermediário, portanto é recomendado que os estudantes tenham conhecimento básico do assunto</p>
+            <p>Compre agora
+                <button>R$300</button>
+            </p> 
         </section>
         <section class="Php">
             <h1>Curso Avançado - PHP</h1>
-            <img src="img/new-php-logo.png" alt="Logo Php">
+            <img src="img/php.svg" alt="Logo Php" width="256" height="256">
             <p>Você vai desenvolver com uma das linguagens mais populares no mercado.Use corretamente a orientação a objetos com o PHP. Aprenda a lidar com as coleções. Aproveite o Composer e muito mais!</p
+            <p>Compre agora
+                <button>R$300</button>
+            </p> 
         </section>
         <section class="Dart">
             <h1>Curso Iniciante - Flutter</h1>
-            <img src="img/flutter.png" alt="logo Flutter">
-            <p> Aprenda a gerenciar o estado da sua aplicação com Single Source of TruthUtilizar o Provider para gerenciar o estado de forma escalável</p>
+            <img src="img/flutter.png" alt="logo Flutter" width="256" height="256">
+            <p> Aprenda a gerenciar o estado da sua aplicação, Utilizar o Provider para gerenciar o estado de forma escalável</p>
+            <p>Compre agora
+                <button>R$300</button>
+            </p> 
         </section>
     </article>
     <footer>
@@ -48,12 +60,12 @@
                 </tr>
                 <tr>
                     <td>
-                        telefone: 40028922
+                        telefone: 4002-8922
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        whatsapp : 11988614986
+                        whatsapp : (11)98861-4986
                     </td>
                 </tr>
             </tbody>
