--- a/index.html
+++ b/index.html
@@ -3,48 +3,67 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Galaxy School</title>
+    <style>
+        article{
+            font-family: 'Times New Roman', Times, serif;
+        }
+    </style>
 </head>
 <body>
-    <article>
+    <article style="color: aliceblue;" id="Cursos"> 
         <section class="Ruby">
             <h1>Curso Intermediario- Ruby on rails  </h1>
             <img src="img/ruby.png" alt="Um ruby" width="256" height="256">
             <p>Desenvolva para a web com o framework que revolucionou o mercado pela sua agilidade, além da linguagem Ruby que oferece recursos incríveis. </p>
+            <p>
+                Compre agora
+                <button>R$300</button>
+            </p> 
+            <hr></hr>
         </section>
         <section class="JavaScript">
             <h1>Curso Intermediario- JavaScript</h1>
             <img src="img/javascript.svg" alt="JavaScript Logo" width="256" height="256">
             <p>Desenvolva aplicações reais com Javascript com este curso 100% prático e direto ao ponto. Aprenda <strong>DE VERDADE</strong></p>
-            <p>Compre agora
+            <p>
+                Compre agora
                 <button>R$300</button>
             </p> 
+            <hr></hr>
         </section>
         <section  class="Java">
             <h1>Curso Intermediario- Java</h1>
             <img src="img/java.svg" alt="Logo Java" width="256" height="256">
             <p>Este é um curso que traz um conteúdo considerado intermediário, portanto é recomendado que os estudantes tenham conhecimento básico do assunto</p>
-            <p>Compre agora
+            <p>
+                Compre agora
                 <button>R$300</button>
             </p> 
+            <hr></hr>
         </section>
         <section class="Php">
             <h1>Curso Avançado - PHP</h1>
             <img src="img/php.svg" alt="Logo Php" width="256" height="256">
-            <p>Você vai desenvolver com uma das linguagens mais populares no mercado.Use corretamente a orientação a objetos com o PHP. Aprenda a lidar com as coleções. Aproveite o Composer e muito mais!</p
-            <p>Compre agora
+            <p>Você vai desenvolver com uma das linguagens mais populares no mercado.Use corretamente a orientação a objetos com o PHP. Aprenda a linguagem com as coleções. Aproveite o Composer e muito mais!</p>
+            <p>
+                Compre agora
                 <button>R$300</button>
             </p> 
+            <hr></hr>
         </section>
         <section class="Dart">
             <h1>Curso Iniciante - Flutter</h1>
             <img src="img/flutter.png" alt="logo Flutter" width="256" height="256">
             <p> Aprenda a gerenciar o estado da sua aplicação, Utilizar o Provider para gerenciar o estado de forma escalável</p>
-            <p>Compre agora
+            <p>
+                Compre agora
                 <button>R$300</button>
             </p> 
         </section>
     </article>
+    <div class="contatos" id="Rodapé">
     <footer>
         <table>
             <thead>
@@ -71,5 +90,6 @@
             </tbody>
         </table>
     </footer>
+</div>
 </body>
 </html>
