--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
     </style>
 </head>
 <body>
-    <article style="color: aliceblue;" id="Cursos"> 
+    <article style="color: aliceblue;" id="Cursos">
+        <h1>
+            Galaxy School - Cursos
+            <hr></h1>
+        </h1> 
+
         <section class="Ruby">
             <h1>Curso Intermediario- Ruby on rails  </h1>
             <img src="img/ruby.png" alt="Um ruby" width="256" height="256">
@@ -74,7 +79,7 @@
             <tbody>
                 <tr>
                     <td>
-                        email: joaoalves.contato@outlook.com.br
+                        Email: joaoalves.contato@outlook.com.br
                     </td>
                 </tr>
                 <tr>
